--- a/sampleJB/.gitignore
+++ b/sampleJB/.gitignore
@@ -1,2 +1,41 @@
-/target
+target/
 *.log
+
+#####
+# Eclipse ignores
+# From https://github.com/github/gitignore/blob/master/Global/Eclipse.gitignore
+#####
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin 
+.target
+
+# TeXlipse plugin
+.texlipse
+
+#####
+# END Eclipse ignores
+#####
